[package]
name = "bitmex_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
hmac = "0.10"
sha2 = "0.9"
serde_json = "1.0"
tokio = {version = "1.36.0", features = ["macros","rt-multi-thread"]}
